Fix toggling of text buttons

Instead of removing the trailing " <<" or " >>" from the translated
texts, set the new text as a whole.
This allows texts to be fully translated, in the correct way.

BUG: 307494
FIXED-IN: 2.1